sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/DD_Multi_Select_Picklist_Master__mdt.object-meta.xml
<CustomObject>
    <description>Driver for DdMultiSelectPicklist lwc component

Usage:
&lt;c-dd-multi-select-picklist unique-identifier=&quot;&lt;Any Unique String within app/parent component&gt;&quot; custom-search-name=&quot;&lt;Developer name of a record in this CMT&gt;&quot;&gt;&lt;/c-dd-multi-select-picklist&gt;</description>
    <label>DD Multi Select Picklist Master</label>
    <pluralLabel>DD Multi Select Picklist Object Masters</pluralLabel>
</CustomObject>