sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Clear_Keyword_After_Select__c.field-meta.xml
<CustomField>
    <fullName>Clear_Keyword_After_Select__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Clear Keyword After Select</label>
    <type>Checkbox</type>
</CustomField>