sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Dropdown_CSS_Position__c.field-meta.xml
<CustomField>
    <fullName>Dropdown_CSS_Position__c</fullName>
    <inlineHelpText>Usually set to Absolute. 
Set Fixed if parent width is less than your results width (example: Filters side panel).</inlineHelpText>
    <label>Dropdown CSS Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Absolute</fullName>
                <default>true</default>
                <label>Absolute</label>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>