sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Dropdown_Icon_Avatar_Size__c.field-meta.xml
<CustomField>
    <fullName>Dropdown_Icon_Avatar_Size__c</fullName>
    <label>Dropdown Icon/Avatar Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>medium</fullName>
                <default>true</default>
                <label>medium</label>
            </value>
            <value>
                <fullName>x-small</fullName>
            </value>
            <value>
                <fullName>small</fullName>
            </value>
            <value>
                <fullName>large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>