sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Dropdown_Item_Additional_CSS__c.field-meta.xml
<CustomField>
    <fullName>Dropdown_Item_Additional_CSS__c</fullName>
    <label>Dropdown Item Additional CSS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>