sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Dropdown_Scroll_Height__c.field-meta.xml
<CustomField>
    <fullName>Dropdown_Scroll_Height__c</fullName>
    <inlineHelpText>CSS max-height in px or em or % for the Lookup Results. Might want to leave blank if Limits will keep number of records within the screen.</inlineHelpText>
    <label>Dropdown Scroll Height</label>
    <length>30</length>
    <type>Text</type>
</CustomField>