sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Dropdown_SubLabel_Merge_Format__c.field-meta.xml
<CustomField>
    <fullName>Dropdown_SubLabel_Merge_Format__c</fullName>
    <inlineHelpText>For Object Search: Provide Fields (which should have been included in the SELECT) within {&lt;Field API Name&gt;}

For Aggregate Search: Provide field name of SELECT of AggregateResult</inlineHelpText>
    <label>Dropdown SubLabel Merge Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>