sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Exclude_Already_Selected_Records__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Already_Selected_Records__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Exclude Already Selected Records</label>
    <type>Checkbox</type>
</CustomField>