sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Filter_Allow_Advanced_Operators__c.field-meta.xml
<CustomField>
    <fullName>Filter_Allow_Advanced_Operators__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filter Allow Advanced Operators</label>
    <type>Checkbox</type>
</CustomField>