sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Filter_Allow_IS_BLANK_IS_NOT_BLANK_op__c.field-meta.xml
<CustomField>
    <fullName>Filter_Allow_IS_BLANK_IS_NOT_BLANK_op__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filter Allow IS BLANK &amp; IS NOT BLANK op</label>
    <type>Checkbox</type>
</CustomField>