sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Filter_Label_Has_Expand_Collapse__c.field-meta.xml
<CustomField>
    <fullName>Filter_Label_Has_Expand_Collapse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filter Label Has Expand/Collapse</label>
    <type>Checkbox</type>
</CustomField>