sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <inlineHelpText>DO NOT ADD &apos;FROM &apos;

Enter the name of the Sobject to query</inlineHelpText>
    <label>From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>