sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Group_By__c.field-meta.xml
<CustomField>
    <fullName>Group_By__c</fullName>
    <inlineHelpText>DO NOT ADD &apos;GROUP BY &apos;

Enter Fields -- just like you would do in a query -- but without &apos;GROUP BY &apos;</inlineHelpText>
    <label>Group By</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>