sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Icon_Type__c.field-meta.xml
<CustomField>
    <fullName>Icon_Type__c</fullName>
    <label>Icon Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Icon</fullName>
                <default>true</default>
                <label>Icon</label>
            </value>
            <value>
                <fullName>Avatar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>