sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/IconSrc_Merge_Format__c.field-meta.xml
<CustomField>
    <fullName>IconSrc_Merge_Format__c</fullName>
    <inlineHelpText>For Object Search: Provide Fields (which should have been included in the SELECT) within {&lt;Field API Name&gt;}

For Aggregate Search: Typically will not be used - Use Icon Name to provide the Icon if needed.</inlineHelpText>
    <label>IconSrc Merge Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>