sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Input_Field_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Input_Field_Placeholder__c</fullName>
    <defaultValue>&quot;Search...&quot;</defaultValue>
    <label>Input Field Placeholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>