sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Keep_SearchRes_Open_After_Select__c.field-meta.xml
<CustomField>
    <fullName>Keep_SearchRes_Open_After_Select__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Keep SearchRes Open After Select</label>
    <type>Checkbox</type>
</CustomField>