sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Keyword_Search_Field__c.field-meta.xml
<CustomField>
    <fullName>Keyword_Search_Field__c</fullName>
    <label>Keyword Search Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>