sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Keyword_Search_Like_Operator__c.field-meta.xml
<CustomField>
    <fullName>Keyword_Search_Like_Operator__c</fullName>
    <label>Keyword Search Like Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Starts With</fullName>
                <default>true</default>
                <label>Starts With</label>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>Ends With</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>