sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Keyword_Trim_Logic__c.field-meta.xml
<CustomField>
    <fullName>Keyword_Trim_Logic__c</fullName>
    <label>Keyword Trim Logic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start Trim</fullName>
                <default>true</default>
                <label>Start Trim</label>
            </value>
            <value>
                <fullName>Trim</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>