sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Label_Display_Variant__c.field-meta.xml
<CustomField>
    <fullName>Label_Display_Variant__c</fullName>
    <label>Label Display Variant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Label Hidden</fullName>
                <default>true</default>
                <label>Label Hidden</label>
            </value>
            <value>
                <fullName>Filter</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>