sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <defaultValue>10</defaultValue>
    <inlineHelpText>LIMIT is recommended for Object Searches.</inlineHelpText>
    <label>Limit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>