sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Maximum_Selections__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Selections__c</fullName>
    <label>Maximum Selections</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>