sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Maximum_Selections_Variant__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Selections_Variant__c</fullName>
    <label>Maximum Selections Variant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hide Input</fullName>
                <default>true</default>
                <label>Hide Input</label>
            </value>
            <value>
                <fullName>Disable Input</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>