sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Minimum_Characters__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Characters__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Minimum Characters</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>