sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Order_By__c.field-meta.xml
<CustomField>
    <fullName>Order_By__c</fullName>
    <inlineHelpText>DO NOT ADD &apos;ORDER BY &apos;

Enter Fields + Asc/Desc -- just like you would do in a query -- but without &apos;ORDER BY &apos;</inlineHelpText>
    <label>Order By</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>