sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Picklist_Metadata_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Metadata_Field_Name__c</fullName>
    <label>Picklist Metadata Search Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>