sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Picklist_Metadata_Force_Sort_By__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Metadata_Force_Sort_By__c</fullName>
    <label>Picklist Metadata Force Sort By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>dropDownLabel</fullName>
                <default>true</default>
                <label>dropDownLabel</label>
            </value>
            <value>
                <fullName>value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>