sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Picklist_Metadata_Object_name__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Metadata_Object_name__c</fullName>
    <label>Picklist Metadata Search Object name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>