sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Picklist_Metadata_Search_Label_Format__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Metadata_Search_Label_Format__c</fullName>
    <label>Picklist Metadata Search Label Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>{Label}</fullName>
                <default>true</default>
                <label>{Label}</label>
            </value>
            <value>
                <fullName>{Value} - {Label}</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>