sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Pill_Variant__c.field-meta.xml
<CustomField>
    <fullName>Pill_Variant__c</fullName>
    <label>Pill Variant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top</fullName>
                <default>true</default>
                <label>Top</label>
            </value>
            <value>
                <fullName>Below</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>