sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Query_and_Cache_on_Init__c.field-meta.xml
<CustomField>
    <fullName>Query_and_Cache_on_Init__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Component gets all picklist values on init and will not make server calls again to get the picklist values. 

Usage is recommended for Object Picklist Metadata type and anything scenario which has less number of &lt;near&gt; immutable picklist values.</inlineHelpText>
    <label>Query and Cache on Init</label>
    <type>Checkbox</type>
</CustomField>