sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Results_Variant__c.field-meta.xml
<CustomField>
    <fullName>Results_Variant__c</fullName>
    <label>Results Variant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Listbox</fullName>
                <default>true</default>
                <label>Listbox</label>
            </value>
            <value>
                <fullName>Dropdown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>