sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Results_Width__c.field-meta.xml
<CustomField>
    <fullName>Results_Width__c</fullName>
    <label>Results Width</label>
    <length>255</length>
    <type>Text</type>
</CustomField>