sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Select__c.field-meta.xml
<CustomField>
    <fullName>Select__c</fullName>
    <inlineHelpText>DO NOT ADD &apos;SELECT &apos;

Enter Comma Separated list of field names</inlineHelpText>
    <label>Select</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>