sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Sharing_Model__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Model__c</fullName>
    <label>Sharing Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>With Sharing</fullName>
                <default>true</default>
                <label>With Sharing</label>
            </value>
            <value>
                <fullName>Without Sharing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>