sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/SOSL_Returning_Fields__c.field-meta.xml
<CustomField>
    <fullName>SOSL_Returning_Fields__c</fullName>
    <label>SOSL Returning Fields</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL FIELDS</fullName>
                <default>true</default>
                <label>ALL FIELDS</label>
            </value>
            <value>
                <fullName>NAME FIELDS</fullName>
            </value>
            <value>
                <fullName>EMAIL FIELDS</fullName>
            </value>
            <value>
                <fullName>PHONE FIELDS</fullName>
            </value>
            <value>
                <fullName>SIDEBAR FIELDS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>