sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Object Records</fullName>
                <default>true</default>
                <label>Object Records</label>
            </value>
            <value>
                <fullName>Object Field Picklist Metadata</fullName>
            </value>
            <value>
                <fullName>Aggregate Query</fullName>
            </value>
            <value>
                <fullName>SOSL</fullName>
            </value>
            <value>
                <fullName>Custom Search</fullName>
            </value>
            <value>
                <fullName>Static Values (in DD Multi Select Picklist Search Value)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>