sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/fields/Where_Clause__c.field-meta.xml
<CustomField>
    <fullName>Where_Clause__c</fullName>
    <inlineHelpText>DO NOT ADD &apos;WHERE &apos;

Enter the static where clause if any (No bind variables)</inlineHelpText>
    <label>Where Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>