sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/validationRules/Apex_Class_Name_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Apex_Class_Name_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISBLANK( ApexClassName__c ),
  ISPICKVAL( Type__c , &quot;Custom Search With Arguments&quot;)
)</errorConditionFormula>
    <errorDisplayField>ApexClassName__c</errorDisplayField>
    <errorMessage>Apex Class Name is required for this type.</errorMessage>
</ValidationRule>