sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/validationRules/Apex_Class_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Apex_Class_Required</fullName>
    <active>true</active>
    <description>Apex class name is required for Type Custom Search With Arguments</description>
    <errorConditionFormula>AND( 
  ISBLANK( ApexClassName__c ), 
  ISPICKVAL( Type__c , &quot;Custom Search With Arguments&quot;)  
)</errorConditionFormula>
    <errorDisplayField>ApexClassName__c</errorDisplayField>
    <errorMessage>Apex Class Name is required when type is selected as Custom Search With Arguments</errorMessage>
</ValidationRule>