sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/validationRules/Cache_On_Init_Min_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Cache_On_Init_Min_Characters</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  Query_and_Cache_on_Init__c,
  Minimum_Characters__c &lt;&gt; 0
)</errorConditionFormula>
    <errorDisplayField>Minimum_Characters__c</errorDisplayField>
    <errorMessage>This must be 0 if you intend to &apos;Query and Cache on Init&apos;</errorMessage>
</ValidationRule>