sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/validationRules/Clear_Keyword_After_Select.validationRule-meta.xml
<ValidationRule>
    <fullName>Clear_Keyword_After_Select</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Clear_Keyword_After_Select__c,
 NOT( Keep_SearchRes_Open_After_Select__c)
)</errorConditionFormula>
    <errorDisplayField>Clear_Keyword_After_Select__c</errorDisplayField>
    <errorMessage>Can be checked only for those searches which have &apos;Keep SearchRes Open After Select&apos; checked.</errorMessage>
</ValidationRule>