sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/validationRules/Dropdown_CSS_Position_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Dropdown_CSS_Position_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Results_Variant__c , &apos;Dropdown&apos;),
ISBLANK(TEXT( Dropdown_CSS_Position__c ))
)</errorConditionFormula>
    <errorDisplayField>Dropdown_CSS_Position__c</errorDisplayField>
    <errorMessage>Required for Results Variant Dropdown...</errorMessage>
</ValidationRule>