sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/validationRules/Exclude_Keyword_Needed_if_Exclude_Flag.validationRule-meta.xml
<ValidationRule>
    <fullName>Exclude_Keyword_Needed_if_Exclude_Flag</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(ISPICKVAL(Type__c,&apos;SOSL&apos;)),
 Exclude_Already_Selected_Records__c,
 ISBLANK( Exclude_Field_Name__c )
)</errorConditionFormula>
    <errorDisplayField>Exclude_Field_Name__c</errorDisplayField>
    <errorMessage>Required if &apos;Exclude Already Selected Records&apos;</errorMessage>
</ValidationRule>