sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/validationRules/Field_LabelFormat_Needed_for_Metadata.validationRule-meta.xml
<ValidationRule>
    <fullName>Field_LabelFormat_Needed_for_Metadata</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISBLANK(TEXT(Picklist_Metadata_Search_Label_Format__c)),
  ISPICKVAL( Type__c , &apos;Object Field Picklist Metadata&apos;)
)</errorConditionFormula>
    <errorDisplayField>Picklist_Metadata_Search_Label_Format__c</errorDisplayField>
    <errorMessage>Required for &apos;Object Field Picklist Metadata&apos; Types</errorMessage>
</ValidationRule>