sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/validationRules/Filter_ExpandCollapse_verification.validationRule-meta.xml
<ValidationRule>
    <fullName>Filter_ExpandCollapse_verification</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Filter_Label_Has_Expand_Collapse__c,
NOT(ISPICKVAL(Label_Display_Variant__c,&apos;Filter&apos;))
)</errorConditionFormula>
    <errorDisplayField>Filter_Label_Has_Expand_Collapse__c</errorDisplayField>
    <errorMessage>Applicable only if Label Display Variant is Filter</errorMessage>
</ValidationRule>