sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/validationRules/Group_By_Needed_for_Aggregate.validationRule-meta.xml
<ValidationRule>
    <fullName>Group_By_Needed_for_Aggregate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISBLANK(  Group_By__c ),
  ISPICKVAL( Type__c , &apos;Aggregate Query&apos;)
)</errorConditionFormula>
    <errorDisplayField>Group_By__c</errorDisplayField>
    <errorMessage>Required for &apos;Aggregate Query&apos; Types</errorMessage>
</ValidationRule>