sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/validationRules/Icon_Name_Needed_for_Icon_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Icon_Name_Needed_for_Icon_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISBLANK(   Icon_Name__c ),
  NOT(ISBLANK(TEXT(  Icon_Type__c  )))
)</errorConditionFormula>
    <errorDisplayField>Icon_Name__c</errorDisplayField>
    <errorMessage>Required if Icon Type is specified</errorMessage>
</ValidationRule>