sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/validationRules/Icon_Size_Needed_for_Icon_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Icon_Size_Needed_for_Icon_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISBLANK(TEXT(  Dropdown_Icon_Avatar_Size__c  )),
  NOT(ISBLANK(TEXT(  Icon_Type__c  )))
)</errorConditionFormula>
    <errorDisplayField>Dropdown_Icon_Avatar_Size__c</errorDisplayField>
    <errorMessage>Required if Icon Type is specified</errorMessage>
</ValidationRule>