sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/validationRules/Maximum_Selections_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Maximum_Selections_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK( Maximum_Selections__c ),
NOT(ISBLANK(TEXT(Maximum_Selections_Variant__c)))
)</errorConditionFormula>
    <errorDisplayField>Maximum_Selections__c</errorDisplayField>
    <errorMessage>This is required if maximum selections variant is provided...</errorMessage>
</ValidationRule>