sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/validationRules/Maximum_Selections_Variant_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Maximum_Selections_Variant_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( Maximum_Selections__c )),
ISBLANK(TEXT(Maximum_Selections_Variant__c))
)</errorConditionFormula>
    <errorDisplayField>Maximum_Selections_Variant__c</errorDisplayField>
    <errorMessage>This is required if maximum selections is provided.</errorMessage>
</ValidationRule>