sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/validationRules/Object_Name_Needed_for_Metadata.validationRule-meta.xml
<ValidationRule>
    <fullName>Object_Name_Needed_for_Metadata</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISBLANK(   Picklist_Metadata_Object_name__c ),
  ISPICKVAL( Type__c , &apos;Object Field Picklist Metadata&apos;)
)</errorConditionFormula>
    <errorDisplayField>Picklist_Metadata_Object_name__c</errorDisplayField>
    <errorMessage>Required for &apos;Object Field Picklist Metadata&apos; Types</errorMessage>
</ValidationRule>