sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/validationRules/Pill_Merge_Needed_for_Object_Aggregate.validationRule-meta.xml
<ValidationRule>
    <fullName>Pill_Merge_Needed_for_Object_Aggregate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISBLANK(  Pill_Label_Merge_Format__c  ),
  OR(
    ISPICKVAL( Type__c , &apos;Object Records&apos;),
    ISPICKVAL( Type__c , &apos;Aggregate Query&apos;)
  )
)</errorConditionFormula>
    <errorDisplayField>Pill_Label_Merge_Format__c</errorDisplayField>
    <errorMessage>Required for &apos;Object Records&apos; / &apos;Aggregate Query&apos; Types</errorMessage>
</ValidationRule>