sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Master__mdt/validationRules/Results_Width_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Results_Width_Needed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Results_Variant__c , &apos;Dropdown&apos;),
  ISBLANK( Results_Width__c )
)</errorConditionFormula>
    <errorDisplayField>Results_Width__c</errorDisplayField>
    <errorMessage>Required when Results Variant is &apos;Dropdown&apos;</errorMessage>
</ValidationRule>